--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -1,3 +1,8 @@
+body {
+   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+   font-weight: 300;
+}
+
 /* Custom container */
 .container-narrow {
   margin: 0 auto;
@@ -8,6 +13,26 @@
 
 .navbar .nav {
   float: right; }
+
+/* index */
+.posts {
+  padding: 0;
+}
+
+.posts li {
+  list-style-type: none;
+  padding: 7px 5px;
+font-size: 18px;
+line-height: 160%;
+}
+
+.posts .post-timestamp {
+  padding-top: 2px;
+  float: right;
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #999;
+}
 
 /* posts index */
 .post > h3.title {
