--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -14,12 +14,14 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link rel="icon" href="/favicon.png" type="image/png" />
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="icon" href="{{ BASE_PATH }}/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="{{ BASE_PATH }}/favicon.ico" />
 
     <!-- Le styles -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.2.2.2.min.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link href="{{ BASE_PATH }}/assets/fonts/ss-social-circle.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="{{ BASE_PATH }}/assets/styles/site.css" rel="stylesheet" type="text/css" media="all" />
 
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
@@ -45,17 +47,19 @@
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}
           </ul>
+          {% include JB/social %}
         </div>
       </div>
     </div>
 
     <div class="container-narrow">
-
       <div class="content">
         {{ content }}
       </div>
     </div>
 
     {% include JB/analytics %}
+
+    <script src="{{ ASSET_PATH }}/js/share.js" />
   </body>
 </html>
