--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -42,11 +42,13 @@
       <div class="navbar-inner">
         <div class="container-narrow">
           <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
+        
           <ul class="nav">
-            {% assign pages_list = site.pages %}
-            {% assign group = 'navigation' %}
-            {% include JB/pages_list %}
+            <li>
+              <a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a>
+            </li>
           </ul>
+        
           {% include JB/social %}
         </div>
       </div>
