--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -43,12 +43,6 @@
         <div class="container-narrow">
           <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
         
-          <ul class="nav">
-            <li>
-              <a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a>
-            </li>
-          </ul>
-        
           {% include JB/social %}
         </div>
       </div>
@@ -58,10 +52,14 @@
       <div class="content">
         {{ content }}
       </div>
+
+      <div class="footer">
+        <div class="container-narrow">
+          <span>&copy; {{ site.author.name }}</span>
+        </div>
+      </div>
     </div>
 
     {% include JB/analytics %}
-
-    <script src="{{ ASSET_PATH }}/js/share.js" />
   </body>
 </html>
