--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -10,33 +10,15 @@
     <div class="content">
       {{ content }}
     </div>
+    <ul class="share">
+      <li class="share-twitter">
+        <a href="https://twitter.com/share" class="twitter-share-button" data-via="jrusbatch" data-related="jrusbatch">Tweet</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+      </li>
+    </ul>
+
     <hr>
-    <!--
-    <div class="pagination">
-      <ul>
-      {% if page.previous %}
-        <li class="prev">
-          <a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a>
-        </li>
-      {% else %}
-        <li class="prev disabled">
-          <a>&larr; Previous</a>
-        </li>
-      {% endif %}
-        <li>
-          <a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a>
-        </li>
-      {% if page.next %}
-        <li class="next">
-          <a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a>
-        </li>
-      {% else %}
-        <li class="next disabled"><a>Next &rarr;</a>
-      {% endif %}
-      </ul>
-    </div>
-    <hr>
-  -->
+
     {% include JB/comments %}
   </div>
 </div>
