--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -4,18 +4,16 @@
 
 <div class="row-fluid post-full">
   <div class="span12">
-    <div class="date">
-      <span>{{ page.date | date_to_long_string }}</span>
+    <div class="date clearfix">
+      <span class="pull-left">{{ page.date | date_to_long_string }}</span>
+      <div class="tweet pull-right">
+        <a href="https://twitter.com/share" class="twitter-share-button" data-via="jrusbatch" data-related="jrusbatch">Tweet</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+      </div>
     </div>
     <div class="content">
       {{ content }}
     </div>
-    <ul class="share">
-      <li class="share-twitter">
-        <a href="https://twitter.com/share" class="twitter-share-button" data-via="jrusbatch" data-related="jrusbatch">Tweet</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-      </li>
-    </ul>
 
     <hr>
 
