--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -9,6 +9,7 @@
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="twitter:account_id" content="{{ site.twitter_analytics }}" />
+    <meta property="fb:admins" content="{{ site.facebook_insights }}" />
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -24,7 +25,7 @@
     <!-- Le fav and touch icons -->
     <link rel="icon" href="{{ BASE_PATH }}/favicon.png" type="image/png" />
     <link rel="shortcut icon" href="{{ BASE_PATH }}/favicon.ico" />
-    
+
   <!-- Update these with your own images
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
