--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -8,8 +8,8 @@
 
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="twitter:account_id" content="{{ site.twitter_analytics }}" />
-    <meta property="fb:admins" content="{{ site.facebook_insights }}" />
+    <meta property="twitter:account_id" content="{{ site.JB.analytics.twitter }}" />
+    <meta property="fb:admins" content="{{ site.JB.analytics.facebook }}" />
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
